--- a/key-counter/index.html
+++ b/key-counter/index.html
@@ -10,7 +10,7 @@
         >Counter:
         <div id="count">0</div></span
       ><br />
-      <input type="hidden" id="counter" value="0" />
+      <input type="hidden" id="counter" value="0" /><!--key count input-->
       <input type="button" id="updateCount" value="Add 0 to counter" />
     </form>
     <script src="app.js"></script>
