--- a/key-counter/index.html
+++ b/key-counter/index.html
@@ -10,6 +10,10 @@
         >Counter:
         <div id="count">0</div></span
       ><br />
+      <span
+        >Square Counter:
+        <div id="squareCount">0</div></span
+      ><br />
       <input type="hidden" id="counter" value="0" /><!--key count input-->
       <input type="button" id="updateCount" value="Add 0 to counter" />
     </form>
