Add triangular counter

--- a/key-counter/index.html
+++ b/key-counter/index.html
@@ -14,6 +14,10 @@
         >Square Counter:
         <div id="squareCount">0</div></span
       ><br />
+      <span
+        >Triangle Counter:
+        <div id="triangleCount">0</div></span
+      ><br />
       <input type="hidden" id="counter" value="0" /><!--key count input-->
       <input type="button" id="updateCount" value="Add 0 to counter" />
     </form>
