Add Prettier and format code

--- a/key-counter/index.html
+++ b/key-counter/index.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <title>Counter Application using Key Presses in Go</title>
-    <link href="main.css" />
-  </head>
-  <body>
-    <form method="post" action="/increase-counter">
-      <span
-        >Counter:
-        <div id="count">0</div></span
-      ><br />
-      <span
-        >Square Counter:
-        <div id="squareCount">0</div></span
-      ><br />
-      <span
-        >Triangle Counter:
-        <div id="triangleCount">0</div></span
-      ><br />
-      <input type="hidden" id="counter" value="0" /><!--key count input-->
-      <input type="button" id="updateCount" value="Add 0 to counter" />
-    </form>
-    <script src="app.js"></script>
-  </body>
+    <head>
+        <title>Counter Application using Key Presses in Go</title>
+        <link href="main.css" />
+    </head>
+    <body>
+        <form method="post" action="/increase-counter">
+            <span
+                >Counter:
+                <div id="count">0</div></span
+            ><br />
+            <span
+                >Square Counter:
+                <div id="squareCount">0</div></span
+            ><br />
+            <span
+                >Triangle Counter:
+                <div id="triangleCount">0</div></span
+            ><br />
+            <input type="hidden" id="counter" value="0" /><!--key count input-->
+            <input type="button" id="updateCount" value="Add 0 to counter" />
+        </form>
+        <script src="app.js"></script>
+    </body>
 </html>
